# diffscope-fork

./: .diffscope.yml.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  action.yml  build.rs  install.sh
.cargo/: config.toml
.github/workflows/: diffscope.yml  eval.yml  evalopsbot-review-request.yml  publish-image.yml  release.yml
TOPOS/envs/ENV2-z600/: diffscope-fork.yaml
charts/diffscope/: values.yaml
charts/diffscope/templates/: configmap.yaml  deployment.yaml  secret.yaml
docs/: self-hosting.md
scripts/: verify-file-encoding.ps1  verify-mcp-access.ps1
src/: bridge.rs  config.rs  iris.rs  main.rs
src/commands/eval/runner/execute/: dag.rs
src/core/: context.rs  dag.rs
src/plugins/: plugin.rs
src/plugins/builtin/: mod.rs  sarif.rs
src/review/: verification.rs
src/review/context_helpers/: pattern_repositories.rs
src/review/context_helpers/pattern_repositories/: local.rs
src/review/pipeline/orchestrate/: dag.rs
src/review/pipeline/postprocess/: dag.rs
src/review/verification/: tests.rs
src/review/verification/prompt/: render.rs
src/server/: github.rs
src/server/api/: admin.rs  fix_loop_dag.rs
web/: package-lock.json  package.json
web/src/api/: types.ts
web/src/pages/: Doctor.tsx
web/src/pages/__tests__/: Settings.test.tsx
