[package]
name = "diffscope"
version = "0.5.28"
edition = "2021"
rust-version = "1.88"
build = "build.rs"
authors = ["Jonathan Haas <jonathan@haas.holdings>"]
description = "A composable code review engine with smart analysis, confidence scoring, and professional reporting"
license = "Apache-2.0"
repository = "https://github.com/evalops/diffscope"
keywords = ["code-review", "diff", "analysis", "cli", "security"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "fs", "time", "sync", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
similar = "2.4"
git2 = { version = "0.20", default-features = false }
once_cell = "1.19"
regex = "1.10"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
ignore = "0.4"
shell-words = "1.1"
url = "2.5"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = "8"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
hmac = "0.12"
sha2 = "0.10"
jsonwebtoken = "10"
base64 = "0.22"
futures = "0.3"
opentelemetry = { version = "0.27", features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["trace", "tonic"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
otel = ["opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk", "tracing-opentelemetry"]

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
tower = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "diffscope"
path = "src/main.rs"
